--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,21 @@ services:
     command: >
       bash -c "airflow db migrate && airflow standalone"
 
+  dbt:
+    container_name: dbt_container
+    image: ghcr.io/dbt-labs/dbt-postgres:1.9.latest
+    volumes:
+      - ./dbt/my_project:/usr/app
+      - ./dbt:/root/.dbt
+    working_dir: /usr/app
+    environment:
+      DBT_PROFILES_DIR: "/root/.dbt"
+    depends_on:
+      - postgres
+    networks:
+      - my_network
+    command: run
+
 networks:
   my_network:
     driver: bridge
